--- a/test.html
+++ b/test.html
@@ -1,64 +1,10 @@
 <html>
 	<head>
 		<title>Uber-normalize.css - by Suissa</title>
+		<link rel="stylesheet/less" type="text/css" href="style.less">
+		<script src="less-1.3.0.min.js" type="text/javascript"></script>
 		<style type="text/css">
-			section{
-				width: 60%;
-				margin: 0 auto;
-			}
-				article{
-					border: 1px dashed #666;
-					padding: 20px;
-					margin-top: 100px;
-				}
-
-				/*	Appearence	*/
-				input[type=radio].stylized {
-				    -webkit-appearance: checkbox; /* Chrome and Safari */
-				    -moz-appearance: checkbox; /* Firefox */
-				    appearance: checkbox; /* not supported */
-				}
-				input[type=range].stylized-1 {
-					-webkit-appearance: none;
-				    /* estilização */
-				    width: 300px;
-				    height: 6px;
-				    border-radius: 6px;
-				    border: 1px solid rgba( 0,0,0,0.5 );
-				    box-shadow: 1px 1px 0px white;
-				    background-color: rgba( 0,0,0,0.1 );
-				    background-image: -webkit-linear-gradient( rgba(0,0,0,0.2), rgba(0,0,0,0) );
-				}
-				input[type=range].stylized-2::-webkit-slider-thumb {
-				    /* removendo a aparência padrão (Chrome e Safari) */
-				    -webkit-appearance: none;
-				    /* estilização */
-				    width: 8px;
-				    height: 18px;
-				    border-radius: 8px;
-				    border: 1px solid rgba( 0,0,0,0.3 );
-				    box-shadow: 1px 1px 2px rgba( 0,0,0,0.2 );
-				    background-color: #999;
-				    background-image: -webkit-linear-gradient( #999, #666 );
-				}
-				input[type=range].stylized-2:focus {
-				    outline: none;
-				}
-
-				input[type=range].stylized-2::-webkit-slider-thumb {
-				    outline: none;
-				    box-shadow: 0px 0px 5px 1px red;
-				}
-
-				input[type=range].stylized-2::-webkit-slider-thumb:hover {
-				    background-image: none;
-				    background-color: #777;
-				}
-
-				input[type=range].stylized-2::-webkit-slider-thumb:active {
-				    background-image: none;
-				    background-color: #555;
-				}
+			
 		</style>
 	</head>	
 	<body>
