Add more styles for radio and checkbox

--- a/test.html
+++ b/test.html
@@ -23,13 +23,35 @@
 				<hr />
 
 				<input type="radio" name="sex-stylized" class="stylized" />
-				<label for="syd">Male</label>
+				<label for="male">Male</label>
 
 				<input type="radio" name="sex-stylized" class="stylized" />
-				<label for="david">Female</label>
+				<label for="female">Female</label>
 
 				<input type="radio" name="sex-stylized" class="stylized" />
-				<label for="roger">Don't know</label>
+				<label for="dontknow">Don't know</label>
+			</article>
+
+			<article>
+				<input type="checkbox" name="music" />
+				<label for="music">Rock</label>
+
+				<input type="checkbox" name="music" />
+				<label for="music">Metal</label>
+
+				<input type="checkbox" name="music" />
+				<label for="music">Classic</label>
+
+				<hr />
+				
+				<input type="checkbox" name="music" class="stylized" />
+				<label for="music">Rock</label>
+
+				<input type="checkbox" name="music" class="stylized" />
+				<label for="music">Metal</label>
+
+				<input type="checkbox" name="music" class="stylized" />
+				<label for="music">Classic</label>
 			</article>
 
 			<article>
@@ -41,6 +63,7 @@
 
 				<input type="range" class="stylized-1 stylized-2">
 			</article>
+
 		</section>
 	</body>
 </html>
