Create style-slider-thumb mixin for create new style for the slider

--- a/test.html
+++ b/test.html
@@ -9,8 +9,11 @@
 	</head>	
 	<body>
 		<section>
+		
+<div>testando</div>
 			<h1>Only for tests</h1>
 			<article>
+				<h2>Radio</h2>
 				<input type="radio" name="sex" />
 				<label for="syd">Male</label>
 
@@ -33,6 +36,7 @@
 			</article>
 
 			<article>
+				<h2>Checkbox</h2>
 				<input type="checkbox" name="music" />
 				<label for="music">Rock</label>
 
@@ -43,7 +47,7 @@
 				<label for="music">Classic</label>
 
 				<hr />
-				
+
 				<input type="checkbox" name="music" class="stylized" />
 				<label for="music">Rock</label>
 
@@ -52,6 +56,24 @@
 
 				<input type="checkbox" name="music" class="stylized" />
 				<label for="music">Classic</label>
+			</article>
+
+			<article>
+				<h2>Select</h2>
+
+				<select>
+					<option value="Sao Paulo">Sao Paulo</option>
+					<option value="Tokio">Tokio</option>
+					<option value="Paris">Paris</option>
+				</select>
+
+				<hr />
+
+				<select class="stylized">
+					<option value="Sao Paulo">Sao Paulo</option>
+					<option value="Tokio">Tokio</option>
+					<option value="Paris">Paris</option>
+				</select>
 			</article>
 
 			<article>
