--- a/test.html
+++ b/test.html
@@ -10,8 +10,36 @@
 	<body>
 		<section>
 		
-<div>testando</div>
+<div>div</div>
 			<h1>Only for tests</h1>
+
+			<article>
+				<h2>Required</h2>
+
+				<input type="text" name-"email" pattern="^(([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5}){1,25})$" required>
+				<label for="email">Email</label>
+
+				<hr />
+
+				<input type="password" name-"pass" pattern="\w{6}" required>
+				<label for="pass">Password</label>
+
+				<hr />
+
+				<input type="text" name="site" value="" pattern="^([a-zA-Z0-9]([a-zA-Z0-9\-]{0,61}[a-zA-Z0-9])?\.)+[a-zA-Z]{2,6}$" required>
+				<label for="site">Site</label>
+
+				<hr />
+
+				<input type="date" name="birth" value="" required>
+				<label for="site">Birth</label>
+
+				<hr />
+
+				<input type="text" name="phone" value="" pattern="^\d{2}-\d{4}-\d{4}$" required>
+				<label for="phone">Phone 99-9999-9999</label>
+			</article>
+
 			<article>
 				<h2>Radio</h2>
 				<input type="radio" name="sex" />
