--- a/test.html
+++ b/test.html
@@ -21,7 +21,7 @@
 
 				<hr />
 
-				<input type="password" name-"pass" pattern="\w{6}" required>
+				<input type="password" name-"pass" pattern="\w{6,}" required>
 				<label for="pass">Password</label>
 
 				<hr />
