--- a/test.html
+++ b/test.html
@@ -1,5 +1,7 @@
+<!doctype html>
 <html>
 	<head>
+    <meta charset="UTF-8">
 		<title>Uber-normalize.css - by Suissa</title>
 		<link rel="stylesheet/less" type="text/css" href="style.less">
 		<script src="less-1.3.0.min.js" type="text/javascript"></script>
