Add select style

--- a/test.html
+++ b/test.html
@@ -12,9 +12,9 @@
 	<body>
 		<section>
 		
-<div>div</div>
 			<h1>Only for tests</h1>
 
+<div id="div-button">div</div>
 			<article>
 				<h2>Required</h2>
 
